--- a/ui.css
+++ b/ui.css
@@ -58,10 +58,11 @@
 
 #shop-menu {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
     gap: 15px;
-    width: 600px;
-    max-width: 95vw;
+    width: 700px;
+    max-width: 90vw;
+    padding: 20px;
 }
 
 #wave-title,
